<resources>
    <string name="app_name" translatable="false">Grocer</string>
    <string name="search_product">Search Product</string>
    <string name="bread">Bread</string>
    <string name="beverages">Beverages</string>
    <string name="confectionary">Confectionary</string>
    <string name="dental_care">Dental Care</string>
    <string name="grains">Grains</string>
    <string name="pizza">Pizza</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="no_item">Start Shopping!</string>
    <string name="total">Total</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="Pay">Pay</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="language_changed">Please restart the app for language change to take effect</string>
    <string name="select_language">Please select a language</string>
    <string name="not_available">Not Available</string>
    <string name="currency">€</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="contact">Contact No.</string>
    <string name="recent_order">View Recent Order</string>
    <string name="details_saved">Details Saved Succesfully</string>
    <string name="order_placed">Order Placed</string>
    <string name="details_alert">User details not set</string>
    <string name="details_alert_detailed">Please set your details</string>
    
    <string-array name="languages">
        <item>en</item>
        <item>hi</item>
        <item>pt</item>
    </string-array>



</resources>