<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">




    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar_layout"
        android:id="@+id/toolbar"
        />


    <ListView

        android:id="@+id/shoppingCartList"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_280sdp"
        android:layout_below="@id/toolbar"
        />

    <TextView
        android:id="@+id/empty_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/no_item"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="@dimen/_25sdp"/>

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:textStyle="bold"
        android:layout_below="@id/shoppingCartList"
        android:visibility="invisible"

        />
    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="400"
        android:layout_toRightOf="@id/total"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_80sdp"
        android:textStyle="bold"
        android:layout_below="@id/shoppingCartList"
        android:visibility="invisible"

        />

    <TextView
        android:id="@+id/delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_charges"
        android:textSize="@dimen/_15sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_27sdp"
        android:textStyle="bold"
        android:layout_below="@id/total"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/delivery_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="400"
        android:layout_toRightOf="@id/total"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_27sdp"
        android:textStyle="bold"
        android:layout_alignLeft="@id/total_price"
        android:layout_alignStart="@id/total_price"
        android:layout_below="@id/total_price"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/pay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pay"
        android:layout_below="@id/delivery"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/addtocart_background"
        android:textColor="#ffffff"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"
        />




    </RelativeLayout>
</ScrollView>